Refactor fonts as variables

--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -18,7 +18,7 @@ html{
     font-size: 15px;
   }
 
-  font-family: "Roboto", sans-serif;
+  font-family: $body-font-family;
   font-weight: normal;
   color: $off-black;
 }
