--- a/sass/style.scss
+++ b/sass/style.scss
@@ -556,7 +556,7 @@ pre[class*="language-"] {
     background: hsl(30, 10%, 90%);
     top: 0;
     left: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: $body-font-family;
     -webkit-font-smoothing: antialiased;
     color: #555;
     content:attr(class);
